Refactored CandidateValidator: moved separators to constants